# alora

./: .dockerignore  .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  LICENSE  Makefile  README.md
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_products.py
apps/api/app/: db.py  main.py
apps/api/app/core/: config.py
apps/api/app/models/: __init__.py  autonomy.py  belief.py  episode.py  memory_audit.py  product.py
apps/api/app/routers/: autonomy.py  catalog.py  chat.py  events.py  memory.py  recs.py
apps/api/app/schemas/: autonomy.py  catalog.py  chat.py  events.py  inspector.py  memory.py  recs.py
apps/api/app/services/: autonomy.py  catalog.py  chat_agent.py  embeddings.py  intent.py  memory_client.py  qwen.py  recs.py  session_store.py
apps/api/app/workers/: consolidation.py  decay.py
apps/api/scripts/: seed_catalog.py
apps/api/tests/: conftest.py  test_autonomy.py  test_autonomy_endpoints.py  test_catalog.py  test_chat.py  test_consolidation.py  test_cors.py  test_decay.py  test_embeddings.py  test_events.py  test_health.py  test_memory_client.py  test_memory_inspector.py  test_qwen.py  test_recs.py  test_session_store.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/products/[slug]/: page.tsx
apps/web/lib/: products.ts
apps/web/public/: agent.js
bench/: README.md  fake_qwen.py  harness.py  llm_judge.py  personas.py  report.py  run_benchmark.py
deploy/: Caddyfile  README.md  deploy.sh  docker-compose.yml
docs/: ARCHITECTURE.md  DECISIONS.md  MEMORY_DESIGN.md  PROGRESS.md
