[project]
name = "memora-api"
version = "0.1.0"
description = "Memora FastAPI backend — memory layer + shopping agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.35",
    "redis>=5.0",
    "pgvector>=0.3",
    "tenacity>=8.3",
    "arq>=0.26",
    "httpx>=0.27",
    "mcp[cli]>=1.6",
    # memora-mcp-memory (packages/mcp-memory) must also be installed — see
    # requirements.txt's editable install; a relative path dependency here isn't
    # portable across pyproject tooling, so requirements.txt is the source of truth.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
